update privacy info on faq page

--- a/dpc-web/app/views/pages/faq.html.erb
+++ b/dpc-web/app/views/pages/faq.html.erb
@@ -111,7 +111,7 @@ Already using or testing wth FHIR, especially Bulk FHIR</li>
     <div id="a8" class="usa-accordion__content">
       <ul>
         <li>Data at the Point of Care secures Protected Health Information (PHI) and Personally Identifiable Information (PII) and has multiple layers of protection, such as encryption in transit and at rest, security certification requirements of connecting vendors, auditing and analytics to look for suspicious activity, terms of service restrictions, public and private security keys, and IP address restriction.</li>
-        <li>Data at the Point of Care is built based on privacy requirements defined by HIPAA and outlined in the Notice of Privacy Practices for Original Medicare. This allows patients to opt out of data sharing.</li>
+        <li>Data at the Point of Care is built based on privacy requirements defined by HIPAA and outlined in the Notice of Privacy Practices for Original Medicare. As per the Notice of Privacy Practices, patients are allowed to opt out of data sharing.</li>
         <li>CMS will be using the pilot to test notification and consent messages and processes that are easy to understand by beneficiaries without adding additional complexity to the sharing of data.</li>
       </ul>
     </div>
@@ -123,7 +123,7 @@ Already using or testing wth FHIR, especially Bulk FHIR</li>
     </h2>
     <div id="a9" class="usa-accordion__content">
       <ul>
-        <li>Yes, Data at the Point of Care is based on privacy requirements defined by HIPAA and outlines in the Notice of Privacy Practices for Original Medicare. This allows patients to opt out of data sharing. </li>
+        <li>Yes, Data at the Point of Care is built based on privacy requirements defined by HIPAA and outlined in the Notice of Privacy Practices for Original Medicare. As per the Notice of Privacy Practices, patients are allowed to opt out of data sharing.</li>
         <li>Patients can opt out of data sharing by calling 1800 Medicare (<a href="tel:1-800-633-4227">1-800-633-4227</a>) to request that their data not be shared by CMS to their providers.</li>
       </ul>
     </div>
