--- a/dpc-web/app/views/devise/registrations/new.html.erb
+++ b/dpc-web/app/views/devise/registrations/new.html.erb
@@ -55,7 +55,7 @@
 
         <div class="field">
           <%= f.label :num_providers, "Number of Providers at Your Organization", class: "ds-c-label" %>
-          <%= f.number_field :num_providers, value: 0, min: 0, class: "ds-c-field" %>
+          <%= f.number_field :num_providers, value: '', min: 0, class: "ds-c-field" %>
         </div>
 
         <div class="field">
