clean up the layout files, move tabs into partials

--- a/dpc-web/app/views/dpc_registrations/profile.html.erb
+++ b/dpc-web/app/views/dpc_registrations/profile.html.erb
@@ -1,4 +1,6 @@
-<% title "Welcome, #{@dpc_registration.user.first_name}!" %>
+<% title "Your profile" %>
+<% banner_title "Welcome, #{@dpc_registration.user.first_name}!" %>
+<% tabs_set "shared/user_tabs" %>
 
 <div class="ds-u-md-display--flex ds-u-justify-content--between ds-u-align-items--center">
 <h2>Your profile</h2>
