--- a/dpc-web/app/views/pages/guide.html.erb
+++ b/dpc-web/app/views/pages/guide.html.erb
@@ -1,5 +1,6 @@
 <% title "Guide" %>
 <% banner_title "Documentation" %>
+<% tabs_set "shared/docs_tabs" %>
 
 <div class="ds-l-row">
   <div class="ds-l-col--12 ds-l-md-col--4">
@@ -21,7 +22,7 @@
       </li>
     </ul>
   </div>
-  <main class="ds-l-col--12 ds-l-md-col--8 ds-u-margin-bottom--7" id="main">
+  <main class="ds-l-col--12 ds-l-md-col--8 ds-u-margin-bottom--7">
 
     <h1>Guide</h1>
 
