--- a/dpc-web/app/views/layouts/application.html.erb
+++ b/dpc-web/app/views/layouts/application.html.erb
@@ -9,20 +9,12 @@
 
     <header class="page-header">
       <div class="ds-l-container">
-        <h1 class="page-header__heading"><%= yield(:title) %></h1>
+        <h1 class="page-header__heading">
+          <%= content_for?(:banner_title) ? yield(:banner_title) : yield(:title) %>
+        </h1>
 
-        <% if controller_name == "dpc_registrations" %>
-        <div class="ds-c-tabs">
-          <%= link_to authenticated_root_path, :class => "ds-c-tabs__item #{current_class?(authenticated_root_path)} #{current_class?(dpc_registration_path(current_user.id))}" do %>
-            Dashboard
-          <% end %>
-          <%= link_to profile_path, id: :dpc_registrations_profile_link,
-            :class => "ds-c-tabs__item #{current_class?(profile_path)}
-            #{current_class?(profile_path)}" do %>
-              Profile
-            <% end %>
-        </div>
-        <% end %>
+        <%= render :partial =>  yield(:tabs_set) rescue nil %>
+
       </div>
     </header>
 
