--- a/dpc-web/app/views/pages/reference.html.erb
+++ b/dpc-web/app/views/pages/reference.html.erb
@@ -33,7 +33,7 @@
       </li>
     </ul>
   </div>
-  <main class="ds-l-col--12 ds-l-md-col--8 ds-u-margin-bottom--7" id="main">
+  <main class="ds-l-col--12 ds-l-md-col--8 ds-u-margin-bottom--7">
 
     <h1>Reference</h1>
 
