--- a/dpc-web/app/views/devise/registrations/new.html.erb
+++ b/dpc-web/app/views/devise/registrations/new.html.erb
@@ -54,8 +54,11 @@
         </div>
 
         <div class="field">
-          <%= f.label :num_providers, "Number of Providers at Your Organization", class: "ds-c-label" %>
-          <%= f.number_field :num_providers, value: '', min: 0, class: "ds-c-field" %>
+          <%= f.label :num_providers, class: "ds-c-label" do %>
+          Number of Providers at Your Organization (optional)
+          <span class="ds-c-field__hint">You may use an approximate number.<br/>If you are a vendor, leave blank.</span>
+          <% end %>
+          <%= f.number_field :num_providers, value: '', min: 0, class: "ds-c-field ds-c-field--small" %>
         </div>
 
         <div class="field">
