show num providers unless if health IT vendor

--- a/dpc-web/app/assets/stylesheets/application.scss
+++ b/dpc-web/app/assets/stylesheets/application.scss
@@ -28,6 +28,7 @@
  @import "components/benefit-prop";
  @import "components/billboard";
  @import "components/buttons";
+ @import "components/fields";
  @import "components/footer";
  @import "components/hero";
  @import "components/navbar";
