--- a/dpc-web/app/views/dpc_registrations/profile.html.erb
+++ b/dpc-web/app/views/dpc_registrations/profile.html.erb
@@ -21,6 +21,11 @@
     <div class="ds-text--lead">
       <p><strong>Name:</strong><br><%= @dpc_registration.user.organization %></p>
       <p><strong>Type:</strong><br><%= @dpc_registration.user.organization_type.titleize %></p>
+
+      <% unless @dpc_registration.user.organization_type == "health_it_vendor" %>
+        <p><strong>Number of providers:</strong><br><%= @dpc_registration.user.num_providers %></p>
+      <% end %>
+
       <p> <strong>Address:</strong><br>
         <%= @dpc_registration.user.address_1 %><br/>
         <% if @dpc_registration.user.address_2.length > 1 %>
