update mailer and devise views for password resets

--- a/dpc-web/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/dpc-web/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,13 @@
-<p>Hello <%= @resource.email %>!</p>
+<h1>Hi <%= @resource.email %>,</h1>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>We received your request to reset your password. Simply click “Reset Password”&nbsp;below to create a new password at <a href="https://dpc.cms.gov/" target="_blank">dpc.cms.gov</a>. For security reasons, this link will be valid for 6 hours and can only be used once.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p>Thank you from the DPC team!</p>
+
+<div style="text-align: center;">
+  <%= link_to 'Change password', edit_password_url(@resource, reset_password_token: @token), :style => 'display: block; border-radius: 4px; background-color: #0071BC; color: #ffffff; display: inline-block; margin: 40px auto; font-size: 16px; text-decoration: none; padding: 18px; text-align: center; font-weight: bold;', :target => '_blank' %>
+</div>
 
 <p>If you didn't request this, please ignore this email.</p>
+
 <p>Your password won't change until you access the link above and create a new one.</p>
