add class to button

--- a/dpc-web/app/views/devise/passwords/edit.html.erb
+++ b/dpc-web/app/views/devise/passwords/edit.html.erb
@@ -24,7 +24,7 @@
         </div>
 
         <div class="actions">
-          <%= f.submit "Change my password" %>
+          <%= f.submit "Change password", :class => "ds-c-button ds-c-button--primary" %>
         </div>
       <% end %>
     </div>
