Add password reset functionality
* Implement devise Recoverable module and add required columns
* Introduce use of data-test attributes for tests (rather than HTML
  elements that are used in design or functionality semantics)
* Add pry because that's what I use for debugging
* Make sure test url defaults are set

--- a/dpc-web/app/views/devise/passwords/new.html.erb
+++ b/dpc-web/app/views/devise/passwords/new.html.erb
@@ -9,12 +9,12 @@
         <%= render "devise/shared/error_messages", resource: resource %>
 
         <div class="field">
-          <%= f.label :email, :class => "ds-c-label" %>
-          <%= f.email_field :email, autocomplete: "email", :class => "ds-c-field" %>
+          <%= f.label :email, class: "ds-c-label" %>
+          <%= f.email_field :email, autocomplete: "email", class: "ds-c-field" %>
         </div>
 
         <div class="actions ds-u-margin-top--3">
-          <%= f.submit "Send password reset instructions", :class => "ds-c-button ds-c-button--primary" %>
+          <%= f.submit "Send password reset instructions", class: "ds-c-button ds-c-button--primary", data: {test: "submit"} %>
         </div>
       <% end %>
 
