add margin on new password page

--- a/dpc-web/app/views/devise/passwords/edit.html.erb
+++ b/dpc-web/app/views/devise/passwords/edit.html.erb
@@ -23,7 +23,7 @@
           <%= f.password_field :password_confirmation, :class => "ds-c-field" %>
         </div>
 
-        <div class="actions">
+        <div class="actions ds-u-margin-top--3">
           <%= f.submit "Change password", :class => "ds-c-button ds-c-button--primary", data: { test: "submit" } %>
         </div>
       <% end %>
