Update hash rockets to Ruby 2 symbol key syntax

--- a/dpc-web/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/dpc-web/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -5,7 +5,7 @@
 <p>Thank you from the DPC team!</p>
 
 <div style="text-align: center;">
-  <%= link_to 'Change password', edit_password_url(@resource, reset_password_token: @token), :style => 'display: block; border-radius: 4px; background-color: #0071BC; color: #ffffff; display: inline-block; margin: 40px auto; font-size: 16px; text-decoration: none; padding: 18px; text-align: center; font-weight: bold;', :target => '_blank' %>
+  <%= link_to 'Change password', edit_password_url(@resource, reset_password_token: @token), style: 'display: block; border-radius: 4px; background-color: #0071BC; color: #ffffff; display: inline-block; margin: 40px auto; font-size: 16px; text-decoration: none; padding: 18px; text-align: center; font-weight: bold;', target: '_blank' %>
 </div>
 
 <p>If you didn't request this, please ignore this email.</p>
