Update reset password mailer
* Include the reset_password_sent_at timestamp so we can see how long
  the email send takes
* Use the user's first name rather than email when addressing them in
  the email text

--- a/dpc-web/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/dpc-web/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,4 +1,4 @@
-<h1>Hi <%= @resource.email %>,</h1>
+<h1>Hi <%= @resource.first_name %>,</h1>
 
 <p>We received your request to reset your password. Simply click “Reset Password”&nbsp;below to create a new password at <a href="https://dpc.cms.gov/" target="_blank">dpc.cms.gov</a>. For security reasons, this link will be valid for 6 hours and can only be used once.</p>
 
@@ -11,3 +11,5 @@
 <p>If you didn't request this, please ignore this email.</p>
 
 <p>Your password won't change until you access the link above and create a new one.</p>
+
+<p><i>Password reset request sent at: <%= @resource.reset_password_sent_at %>.</i></p>
