--- a/dpc-web/app/views/devise/passwords/new.html.erb
+++ b/dpc-web/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,32 @@
-<h2>Forgot your password?</h2>
+<% title "Forgot your password?" %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div class="ds-l-row">
+  <div class="ds-l-col--12 ds-l-md-col--6 ds-u-margin-bottom--1 ds-u-margin-x--auto">
+    <div class="card card--border-top card--shadow">
+      <h1 class="ds-u-margin-top--0">Forgot your password?</h1>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+
+        <div class="field">
+          <%= f.label :email, class: "ds-c-label" %>
+          <%= f.email_field :email, autocomplete: "email", class: "ds-c-field" %>
+        </div>
+
+        <div class="actions ds-u-margin-top--3">
+          <%= f.submit "Send password reset instructions", class: "ds-c-button ds-c-button--primary", data: {test: "submit"} %>
+        </div>
+      <% end %>
+
+    </div>
   </div>
+</div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+<div class="ds-l-row">
+  <div class="ds-l-col--12 ds-l-md-col--6 ds-u-margin-x--auto">
+    <div class="card">
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-<% end %>
+</div>
 
-<%= render "devise/shared/links" %>
