Flesh out internal user functionality
* Introduce 'internal' namespace for routes and files
* Ensure internal users and users can't access the other's sign in page
once they're logged in (prevent double login)
* Route internal users to users index once logged in (and this page just
says "Pending" right now)

--- a/dpc-web/app/views/shared/_navbar.html.erb
+++ b/dpc-web/app/views/shared/_navbar.html.erb
@@ -34,14 +34,7 @@ aria-controls="topnav-wrap" aria-label="Close menu">
         <% end %>
       </li>
 
-      <% unless user_signed_in? %>
-        <li class="topnav__item topnav__item--buttons ds-u-padding-right--1">
-          <%= link_to "Log in", new_session_path(User), class: "ds-c-button" %>
-        </li>
-        <li class="topnav__item topnav__item--buttons">
-          <%= link_to "Request access", new_user_registration_path, class: "ds-c-button ds-c-button--primary" %>
-        </li>
-      <% else %>
+      <% if user_signed_in? %>
         <li class="topnav__item usa-accordion">
           <button class="topnav__link usa-accordion__button" type="button" aria-expanded="false"
                   aria-controls="nav-1" data-test="my-account-menu">My account</button>
@@ -59,7 +52,22 @@ aria-controls="topnav-wrap" aria-label="Close menu">
               </a>
             </li>
           </ul>
+        </li>
 
+      <% elsif internal_user_signed_in? %>
+        <li class="topnav__item">
+          <a class="topnav__link" href="<%= destroy_internal_user_session_path %>"
+              id="sign-out" data-method="delete" data-test="internal-user-signout">
+              Sign out
+          </a>
+        </li>
+
+      <% else %>
+        <li class="topnav__item topnav__item--buttons ds-u-padding-right--1">
+          <%= link_to "Log in", new_session_path(User), class: "ds-c-button", data: { test: "login-link" } %>
+        </li>
+        <li class="topnav__item topnav__item--buttons">
+          <%= link_to "Request access", new_user_registration_path, class: "ds-c-button ds-c-button--primary" %>
         </li>
       <% end %>
     </ul>
