--- a/dpc-web/app/views/pages/reference.html.erb
+++ b/dpc-web/app/views/pages/reference.html.erb
@@ -31,6 +31,9 @@
       <li class="sidenav__item">
         <a href="#dpc-implementation-guide" class="sidenav__link">Implementation Guide</a>
       </li>
+      <li class="sidenav__item">
+        <a href="#openapi-documentation" class="sidenav__link">OpenAPI Documentation</a>
+      </li>
     </ul>
   </div>
   <main class="ds-l-col--12 ds-l-md-col--8 ds-u-margin-bottom--7">
