WIP Users Index for internal users
* Add controller test helpers for Devise
* Add rails-controller-testing gem in order to use `assigns`. I want to
  use this for now to test that we're returning the users we want to
  from the controller. This may become unnecessary depending how this
  filter/search index evolves.

--- a/dpc-web/app/views/internal/users/index.html.erb
+++ b/dpc-web/app/views/internal/users/index.html.erb
@@ -1,3 +1,13 @@
 <p>
   Hello, <%= current_internal_user.name ||  current_internal_user.email %>
 </p>
+
+<div>
+  <h1>Viewing <%= @users.count %> provider users</h1>
+
+  <% @users.each do |user| %>
+    <%= user.id %>
+    <%= user.name %>
+    SIgned up: <%= user.created_at %>
+  <% end %>
+</div>
