Work on users mgmt UI

--- a/dpc-web/app/views/dpc_registrations/show.html.erb
+++ b/dpc-web/app/views/dpc_registrations/show.html.erb
@@ -14,7 +14,7 @@
   </div>
 
 </div>
-<div class="ds-l-row dashboar-grid">
+<div class="ds-l-row dashboard-grid">
   <div class="ds-l-col--12 ds-l-sm-col--6 dashboard-grid__item">
     <div class="dashboard-grid__content">
     <h3>Join the Google Group.</h3>
