MVPs of internal/users index and show
* Functional on mobile and close enough to mockups for now. I want to
  start working on filter functionality at this point.
* Update specs to look for email when internal user signs in. This seems
  like the most specific information for a user; we use their name if
  the email isn't available.

--- a/dpc-web/app/assets/stylesheets/application.scss
+++ b/dpc-web/app/assets/stylesheets/application.scss
@@ -31,6 +31,7 @@
  @import "components/fields";
  @import "components/footer";
  @import "components/hero";
+ @import "components/icons";
  @import "components/navbar";
  @import "components/page-headers";
  @import "components/pills";
