As a CMS user I want to view users who have requested access. (#228)
* WIP Users Index for internal users

* Add controller test helpers for Devise
* Add rails-controller-testing gem in order to use `assigns`. I want to
  use this for now to test that we're returning the users we want to
  from the controller. This may become unnecessary depending how this
  filter/search index evolves.

* Change wrong password message now that we have PW rest

* Work on users mgmt UI

* Ignore .env for storing envs in local dev

* More work on users views

More work on users index page

* MVPs of internal/users index and show

* Functional on mobile and close enough to mockups for now. I want to
  start working on filter functionality at this point.
* Update specs to look for email when internal user signs in. This seems
  like the most specific information for a user; we use their name if
  the email isn't available.

* Add pagination with Kaminari

* https://github.com/kaminari/kaminari
* Default to 50 per page (my personal prefernece but we can change)
* Add pagination links and info to users index
* Also sort users by created_at DESC for now until we add sorting

* Updates to appease rubocop

* Add created_at index to users

--- a/dpc-web/app/views/internal/users/index.html.erb
+++ b/dpc-web/app/views/internal/users/index.html.erb
@@ -1,3 +1,48 @@
-<p>
-  Hello, <%= current_internal_user.name ||  current_internal_user.email %>
-</p>
+<% title "Manage Users" %>
+<%= render partial: 'shared/alerts', locals: { notice: flash[:notice], alert: flash[:alert] } %>
+
+<div class="ds-l-row">
+  <div class="ds-l-row--12 ds-l-md-col--3">
+  </div>
+
+  <div class="ds-l-row--12 ds-l-md-col--9">
+    <div class="ds-l-row">
+      <h1 class="ds-h1">Viewing <b><%= @users.total_count %></b> provider users</h1>
+    </div>
+    <div class="ds-l-row">
+      <p class="ds-u-padding-x--1"><%= page_entries_info @users %></p>
+    </div>
+
+    <% @users.each do |user| %>
+      <div class="ds-l-row">
+        <div class="ds-l-col ds-u-flex-wrap--wrap ds-u-display--flex-sm ds-u-padding--1">
+          <div class="ds-u-border--1 ds-u-radius height-sm--auto height-md--full">
+            <div class="ds-u-fill--gray-lightest height-md--full admin-list-subection admin-list-subsection--left">
+              <div class="ds-u-padding--1">
+                <%= user.id %>
+              </div>
+            </div>
+            <div class="ds-u-padding--1 ds-u-display--inline-block">
+              <div class="ds-u-font-size--lead">
+                <%= link_to user.name, internal_user_path(user) %>
+              </div>
+
+              <div class="ds-u-align-items--end ds-u-font-style--italic">
+                Signed up: <%= user.created_at %>
+              </div>
+            </div>
+            <div class="ds-u-border-left--1 admin-list-subection admin-list-subsection--right">
+              <div class="ds-u-padding--1 ds-u-fill--gold-lightest admin-list-heading--orange">Requested Organization</div>
+              <div class="ds-u-padding--1 ds-u-font-size--small">
+                <div><%= user.organization %> </div>
+                <div><%= user.organization_type.titleize %> </div>
+                <div><%= city_state(user) %> </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+    <%= paginate @users %>
+  </div>
+</div>
