--- a/dpc-web/app/assets/stylesheets/application.scss
+++ b/dpc-web/app/assets/stylesheets/application.scss
@@ -32,6 +32,7 @@
  @import "components/footer";
  @import "components/hero";
  @import "components/icons";
+ @import "components/modals";
  @import "components/navbar";
  @import "components/page-headers";
  @import "components/pills";
