--- a/dpc-web/app/views/internal/users/_filter_modal.html.erb
+++ b/dpc-web/app/views/internal/users/_filter_modal.html.erb
@@ -4,13 +4,33 @@
       <h1 class="ds-h2" id="dialog-title">Filter provider users</h1>
       <button class="ds-c-button ds-c-button--transparent ds-c-dialog__close" aria-label="Close modal dialog">Close</button>
     </header>
-    <main role="main">
-      <p class="ds-text">
-      <strong>Dialog body text.</strong>
-      </p>
-    </main>
-    <aside class="ds-c-dialog__actions" role="complementary">
-      <button class="ds-c-button ds-c-button--danger">Dialog action</button>
-    </aside>
+
+    <%= form_tag internal_users_path, method: "get" do %>
+      <main role="main ds-text">
+        <div class="ds-l-row">
+          <div class="ds-u-padding-x--2">Signup dates</div>
+          <%= date_field_tag :created_after, params[:created_after] %>
+          thru
+          <%= date_field_tag :created_before, params[:created_before] %>
+        </div>
+
+        <div class="ds-l-row">
+          <div class="ds-h5 ds-u-padding-top--2 ds-u-padding-left--2">Unassigned users</div>
+
+          <div class="ds-u-display--flex">
+            <div class="ds-u-padding-x--2">Requested organization</div>
+            <%= text_field_tag :requested_org, params[:requested_org] %>
+          </div>
+
+          <div class="ds-u-display--flex">
+            <div class="ds-u-padding-x--2">Requested organization type</div>
+            <%= select_tag :requested_org_type, options_for_select(organization_types_for_select, params[:requested_org_type]), include_blank: true %>
+          </div>
+        </div>
+      </main>
+      <aside class="ds-c-dialog__actions" role="complementary">
+        <%= submit_tag "Apply filters", class: "ds-c-button ds-c-button--danger" %>
+      </aside>
+    <% end %>
   </div>
 </div>
