Add feature specs for user search and filter
Later we will add more filtering functionality and extract the
controller code to a search object with corresponding unit tests, but
for now let's get this covered with feature tests.

--- a/dpc-web/app/views/internal/users/_filter_modal.html.erb
+++ b/dpc-web/app/views/internal/users/_filter_modal.html.erb
@@ -29,7 +29,7 @@
         </div>
       </main>
       <aside class="ds-c-dialog__actions" role="complementary">
-        <%= submit_tag "Apply filters", class: "ds-c-button ds-c-button--danger" %>
+        <%= submit_tag "Apply filters", class: "ds-c-button ds-c-button--danger", data: { test: 'users-filter-submit' } %>
       </aside>
     <% end %>
   </div>
