--- a/dpc-web/app/views/layouts/application.html.erb
+++ b/dpc-web/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
 
       </div>
     </header>
+    <%= render partial: 'shared/alerts', locals: { notice: flash[:notice], alert: flash[:alert] } %>
 
     <!-- content -->
     <section class="ds-l-container ds-u-padding-top--7 ds-u-margin-bottom--7" id="main">
