--- a/dpc-web/app/views/internal/users/index.html.erb
+++ b/dpc-web/app/views/internal/users/index.html.erb
@@ -9,8 +9,25 @@
     <div class="ds-l-row">
       <h1 class="ds-h1">Viewing <b><%= @users.total_count %></b> provider users</h1>
     </div>
+
     <div class="ds-l-row">
       <p class="ds-u-padding-x--1"><%= page_entries_info @users %></p>
+    </div>
+
+    <div class="ds-l-row">
+      <%= form_tag internal_users_path, method: "get" do %>
+        <%= text_field_tag :keyword, params[:keyword], placeholder: "first name, last name, or email" %>
+        <%= submit_tag "Search", data: { test: 'users-keyword-search-submit' } %>
+      <% end %>
+    </div>
+
+    <div class="ds-l-row">
+      <a href="#" id="filter-modal-trigger" class="ds-u-padding-x--1" data-modal-show="filter-modal" data-test="filter-modal-trigger">
+        <svg class="icon" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <use xlink:href="/assets/solid.svg#filter"></use>
+        </svg>
+        Filter
+      </a>
     </div>
 
     <% @users.each do |user| %>
@@ -46,3 +63,5 @@
     <%= paginate @users %>
   </div>
 </div>
+
+ <%= render 'filter_modal' %>
