Add tags and taggability
Use dedicated Internal::TaggingsController to isolate the logic
for assigning new taggings for a user. Add validations to Tag and
Tagging.

--- a/dpc-web/app/views/internal/users/show.html.erb
+++ b/dpc-web/app/views/internal/users/show.html.erb
@@ -9,6 +9,32 @@
 
 <section class="ds-l-container ds-u-border--1 ds-u-radius">
   <div class="ds-l-row">
+    <h2 class="ds-u-padding-x--2">Tags</h2>
+  </div>
+
+  <div class="ds-l-row--12" data-test="user-tags">
+    <% if @user.tags.count == 0 %>
+      <p>No tags</p>
+    <% else %>
+      <% @user.tags.each do |tag| %>
+        <span class="ds-c-badge"><%= tag.name %></span>
+      <% end %>
+    <% end %>
+  </div>
+
+  <div class="ds-l-row--12">
+    <%= form_for Tagging.new, url: internal_taggings_path, html: { method: :post } do |f| %>
+      <%= f.label :tag_id, "New tag", class: "ds-c-label ds-u-margin-top--0" %>
+      <%= f.collection_select :tag_id, available_tags(@user), :id, :name, { include_blank: true }, class: "ds-c-field" %>
+      <%= f.hidden_field :taggable_id, value: @user.id %>
+      <%= f.hidden_field :taggable_type, value: 'User' %>
+      <%= f.submit "Add tag", data: { test: "add-tag-submit" } %>
+    <% end %>
+  </div>
+</section>
+
+<section class="ds-l-container ds-u-border--1 ds-u-radius">
+  <div class="ds-l-row">
     <h2 class="ds-u-padding-x--2">Signup info</h2>
   </div>
 
