--- a/dpc-web/app/views/shared/_alerts.html.erb
+++ b/dpc-web/app/views/shared/_alerts.html.erb
@@ -1,5 +1,5 @@
 <% if notice %>
-  <div class="ds-c-alert ds-u-margin-bottom--5"">
+  <div class="ds-c-alert"">
     <div class="ds-c-alert__body">
       <h3 class="ds-c-alert__heading"><%= notice %></h3>
     </div>
@@ -7,7 +7,7 @@
 <% end %>
 
 <% if alert %>
-  <div class="ds-c-alert ds-c-alert--error ds-u-margin-bottom--5"">
+  <div class="ds-c-alert ds-c-alert--error"">
     <div class="ds-c-alert__body">
       <h3 class="ds-c-alert__heading"><%= alert %></h3>
     </div>
