Add ability to create/delete tags
* InternalUser functionality. We had no mockup for this and ideally this
  is something the IU can do when adding tags to a user (i.e. type the
  name on the users#show page and if it doesn't exist, create a new one)
  but this was easier for now.
* Right now hardcode css for "current" item in navbar on each page.
  Eventually I want to pull this out to be a partial or part of the
  layout file.

--- a/dpc-web/app/views/internal/users/index.html.erb
+++ b/dpc-web/app/views/internal/users/index.html.erb
@@ -2,6 +2,14 @@
 
 <div class="ds-l-row">
   <div class="ds-l-row--12 ds-l-md-col--3">
+    <ul class="ds-c-vertical-nav">
+      <li class="ds-c-vertical-nav__item">
+        <%= link_to "Users", internal_users_path, class: "ds-c-vertical-nav__label ds-c-vertical-nav__label--current" %>
+      </li>
+      <li class="ds-c-vertical-nav__item">
+        <%= link_to "Tags", internal_tags_path, class: "ds-c-vertical-nav__label" %>
+      </li>
+    </ul>
   </div>
 
   <div class="ds-l-row--12 ds-l-md-col--9">
