As a CMS user, I want to tag users. (#242)
* Add tags and taggability

Use dedicated Internal::TaggingsController to isolate the logic
for assigning new taggings for a user. Add validations to Tag and
Tagging.

* Add ability to remove a tag from a user

* Use an X icon on the tag badge for this feature
* Change badge color to light blue to match the mockup
* Redirect to "back" instead of taggable path to be more flexible later

* Add ability to create/delete tags

* InternalUser functionality. We had no mockup for this and ideally this
  is something the IU can do when adding tags to a user (i.e. type the
  name on the users#show page and if it doesn't exist, create a new one)
  but this was easier for now.
* Right now hardcode css for "current" item in navbar on each page.
  Eventually I want to pull this out to be a partial or part of the
  layout file.

* Add tags to user items in index

* Fix feature tests

* Include rails helper in all feature tests
* Find tag element by correct selector (with tagging id)

--- a/dpc-web/app/views/internal/users/index.html.erb
+++ b/dpc-web/app/views/internal/users/index.html.erb
@@ -2,6 +2,14 @@
 
 <div class="ds-l-row">
   <div class="ds-l-row--12 ds-l-md-col--3">
+    <ul class="ds-c-vertical-nav">
+      <li class="ds-c-vertical-nav__item">
+        <%= link_to "Users", internal_users_path, class: "ds-c-vertical-nav__label ds-c-vertical-nav__label--current" %>
+      </li>
+      <li class="ds-c-vertical-nav__item">
+        <%= link_to "Tags", internal_tags_path, class: "ds-c-vertical-nav__label" %>
+      </li>
+    </ul>
   </div>
 
   <div class="ds-l-row--12 ds-l-md-col--9">
@@ -41,6 +49,14 @@
             <div class="ds-u-padding--1 ds-u-display--inline-block">
               <div class="ds-u-font-size--lead">
                 <%= link_to user.name, internal_user_path(user) %>
+              </div>
+
+              <div class="ds-u-padding-y--1">
+                <% user.taggings.each do |tagging| %>
+                  <span class="ds-c-badge ds-u-fill--primary-alt">
+                    <%= tagging.tag_name %>
+                  </span>
+                <% end %>
               </div>
 
               <div class="ds-u-align-items--end ds-u-font-style--italic">
